--- a/src/styles/manageProduct.css
+++ b/src/styles/manageProduct.css
@@ -32,9 +32,19 @@
     height: 100%;
   }
   
-  
-  
   @media screen and (max-width: 400px) {
+    .sidebar {
+      width: 100%;
+      height: auto;
+      position: relative;
+    }
+    .sidebar a {float: left;}
+    div.content {
+      margin-left: 0;
+    }
+  }
+  
+  @media screen and (max-width: 700px) {
     .sidebar a {
       text-align: center;
       float: none;
@@ -49,4 +59,18 @@
     border-bottom: 1px solid black;
     margin-left:0px;
     margin-right:0px;
+}
+
+@media screen and (max-width: 400px) {
+  .img-width{
+    width:400px;
+    height:200px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .img-width{
+    width:200px;
+    height:100px;
+  }
 }
