--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -24,3 +24,29 @@
 .remember{
     margin-right: 233px;
 }
+@media screen and (max-width: 400px){
+    .vertical-line{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 820px){
+    .logo{
+        width: 300px !important;
+        margin-left: 0px !important
+    }
+    .forgot-password{
+        margin-top: -50px !important;
+        margin-right: 0px !important;
+        margin-left: 200px !important
+    }
+    .vertical-line{
+        margin-left: 40px;
+    }
+}
+
+@media screen and (min-width: 821px){
+    .vertical-line{
+        margin-left: 50px;
+    }
+}
