--- a/src/styles/manageProduct.css
+++ b/src/styles/manageProduct.css
@@ -5,7 +5,8 @@
   background-color: #f1f1f1;
   position: fixed;
   height: 100%;
-
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .sidebar a {
